# hazor-studio

./: .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: linux-appimage-build.yml  windows-build.yml
docs/: BUILD.md  MCP.md  RENDER-PIPELINE.md
scripts/: build.sh  run-tests.sh  run.sh  tests.sh
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/agent/: AgentConfig.hpp  AgentController.cpp  AgentController.hpp  AgentPanel.cpp  AgentPanel.hpp  AgentPresetManager.cpp  AgentPresetManager.hpp  LLMClient.cpp  LLMClient.hpp
src/ai/: A1111ImageGenProvider.cpp  A1111ImageGenProvider.hpp  AggregatorImageGenProvider.cpp  AggregatorImageGenProvider.hpp  AiImageSnapshot.cpp  AiImageSnapshot.hpp  AiJobRunner.cpp  AiJobRunner.hpp  AiJobTypes.hpp  AiMaskPipeline.cpp  AiMaskPipeline.hpp  AiMaskPostProcessor.cpp  AiMaskPostProcessor.hpp  AiRemoveTypes.hpp  AiSelectionTypes.hpp  AiSubjectSelector.cpp  AiSubjectSelector.hpp  GeminiImageGenProvider.cpp  GeminiImageGenProvider.hpp  ImageGenProvider.hpp  ImageGenProviderFactory.cpp  ImageGenProviderFactory.hpp  InpaintTypes.hpp  OpenAIImageGenProvider.cpp  OpenAIImageGenProvider.hpp  PromptAssistProvider.cpp  PromptAssistProvider.hpp  StabilityImageGenProvider.cpp  StabilityImageGenProvider.hpp
src/animation/: AnimationCommands.hpp  AnimationEvaluator.cpp  AnimationEvaluator.hpp  AnimationExportService.cpp  AnimationExportService.hpp  AnimationInterpolation.cpp  AnimationInterpolation.hpp  AnimationKeyframe.hpp  AnimationModel.cpp  AnimationModel.hpp  AnimationTrack.cpp  AnimationTrack.hpp  AnimationTransform.cpp  AnimationTransform.hpp  AnimationTypes.hpp  AnimationValue.hpp  LayerPropertyController.cpp  LayerPropertyController.hpp  PlaybackController.cpp  PlaybackController.hpp  RasterCelModel.cpp  RasterCelModel.hpp
src/async/: AsyncJob.hpp  AsyncJobSystem.cpp  AsyncJobSystem.hpp
src/brush/: AutoBrush.cpp  AutoBrush.hpp  Brush.hpp  BrushDab.cpp  BrushDab.hpp  BrushEngine.cpp  BrushEngine.hpp  BrushInputState.hpp  BrushPreset.hpp  BrushPresetManager.cpp  BrushPresetManager.hpp  BrushPreviewCache.cpp  BrushPreviewCache.hpp  BrushPreviewRenderer.cpp  BrushPreviewRenderer.hpp  BrushRenderer.cpp  BrushRenderer.hpp  BrushTextureLibrary.cpp  BrushTextureLibrary.hpp  BrushTipLibrary.cpp  BrushTipLibrary.hpp  BrushTypes.hpp  DabContext.hpp  DynamicsConfig.hpp  DynamicsEvaluator.cpp  DynamicsEvaluator.hpp  PredefinedBrush.cpp  PredefinedBrush.hpp
src/cache/: RenderCache.cpp  RenderCache.hpp
src/color/: AdvancedIccColorEngine.hpp  ColorEngine.hpp  ColorManagementService.cpp  ColorManagementService.hpp  ColorManagementSettings.hpp  ColorProfile.cpp  ColorProfile.hpp  ColorProfileRepository.cpp  ColorProfileRepository.hpp  DisplayProfileService.cpp  DisplayProfileService.hpp  QtColorEngine.cpp  QtColorEngine.hpp  SoftProofSettings.hpp
src/controller/: CommandHistory.cpp  CommandHistory.hpp  Commands.hpp  ImageController.cpp  ImageController.hpp  ImageController_Tools.cpp
src/core/: AdjustmentTypes.cpp  AdjustmentTypes.hpp  AlphaChannel.hpp  AppPaths.cpp  AppPaths.hpp  BoxSelection.cpp  BoxSelection.hpp  Clipboard.cpp  Clipboard.hpp  ColorBalanceData.cpp  ColorBalanceData.hpp  ColorEngine.cpp  ColorEngine.hpp  CrashHandler.cpp  CrashHandler.hpp  CurvesData.cpp  CurvesData.hpp  DirtyRegion.cpp  DirtyRegion.hpp  Document.cpp  Document.hpp  GuideManager.cpp  GuideManager.hpp  GuideTypes.cpp  GuideTypes.hpp  HueSaturationData.cpp  HueSaturationData.hpp  Layer.cpp  Layer.hpp  LayerEffect.cpp  LayerEffect.hpp  LayerId.hpp  LayerTreeNode.hpp  PerformanceConfig.hpp  RasterLayerStorage.cpp  RasterLayerStorage.hpp  RenderScheduler.cpp  RenderScheduler.hpp  SelectionMask.cpp  SelectionMask.hpp  (+10 more)
src/engine/: ColorSamplerService.cpp  ColorSamplerService.hpp  ImageEngine.cpp  ImageEngine.hpp  ShapeRenderer.cpp  ShapeRenderer.hpp  ShapeVectorRenderer.cpp  ShapeVectorRenderer.hpp
src/gradient/: GradientCommand.cpp  GradientCommand.hpp  GradientPresetManager.cpp  GradientPresetManager.hpp  GradientRenderer.cpp  GradientRenderer.hpp  GradientTypes.cpp  GradientTypes.hpp
src/histogram/: HistogramCacheManager.cpp  HistogramCacheManager.hpp  HistogramGenerator.cpp  HistogramGenerator.hpp  HistogramRenderer.cpp  HistogramRenderer.hpp  HistogramTypes.hpp
src/io/: ImageCodec.cpp  ImageCodec.hpp  ImageIO.cpp  ImageIO.hpp  ProjectFileService.cpp  ProjectFileService.hpp
src/mcp/: HttpParser.cpp  HttpParser.hpp  McpServer.cpp  McpServer.hpp  McpSettings.hpp  McpTypes.hpp
src/memory/: BufferPool.cpp  BufferPool.hpp
src/processing/: FilterProcessor.cpp  FilterProcessor.hpp  PreviewRenderer.cpp  PreviewRenderer.hpp
src/renderer/: AsyncProjectionBuilder.cpp  AsyncProjectionBuilder.hpp  BlendMath.hpp  BlendRules.hpp  BlendShaderLib.hpp  CanvasInputMapper.hpp  CanvasInputState.hpp  CanvasView.cpp  CanvasView.hpp  DocumentCompositor.cpp  DocumentCompositor.hpp  GPUViewport.cpp  GPUViewport.hpp  GPUViewport_Crop.cpp  GPUViewport_Overlays.cpp  GPUViewport_Shaders.cpp  LayerCompositor.cpp  LayerCompositor.hpp  MipmapCache.cpp  MipmapCache.hpp  OpenGLBackend.hpp  PointerInputEvent.hpp  ProjectionCache.cpp  ProjectionCache.hpp  RenderBackend.hpp  RenderContext.hpp  RenderParams.hpp  RulerGuideOverlay.cpp  RulerGuideOverlay.hpp  ShaderCompat.hpp  TileRenderer.cpp  TileRenderer.hpp
src/resources/: app-icon.rc  resources.qrc
src/shape/: ShapeCommands.hpp  ShapeIconLibrary.cpp  ShapeIconLibrary.hpp  ShapeLayerUpdater.cpp  ShapeLayerUpdater.hpp  ShapePresetFactory.cpp  ShapePresetFactory.hpp  SvgShapeConverter.cpp  SvgShapeConverter.hpp
src/text/: TextEditorController.cpp  TextEditorController.hpp  TextLayoutEngine.cpp  TextLayoutEngine.hpp  TextRenderer.cpp  TextRenderer.hpp  TextTypes.hpp
src/theme/: ClassicTheme.cpp  ClassicTheme.hpp  ComponentStyle.cpp  ComponentStyle.hpp  DarkerTheme.cpp  DarkerTheme.hpp  QtTheme.hpp  ScrollBarStyle.cpp  ScrollBarStyle.hpp  Theme.cpp  Theme.hpp  ThemeBuilder.cpp  ThemeBuilder.hpp  ThemeManager.cpp  ThemeManager.hpp
src/tools/: MoveTool.cpp  MoveTool.hpp  (+5 more)
tests/: CMakeLists.txt
(+458 files in other folders)
